@@ -1,0 +1,9 @@
+fileFormatVersion: 2
+guid: ae19ee494a3b0594aafd738e60db64cb
+folderAsset: yes
+timeCreated: 1505471757
+licenseType: Free
+DefaultImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
