@@ -120,6 +120,8 @@
     <Compile Include="Assets\Editor\PianoControllerEditor.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Editor\Log\FingeringNavigatorTreeDump0.txt" />
+    <None Include="Assets\Editor\Log\FingeringNavigatorTreeDump1.txt" />
     <None Include="Assets\Editor\Resources\MeshPreview.shader" />
     <None Include="Assets\Resources\Materials\Color.shader" />
   </ItemGroup>
